# catalogue-website-builder

./: .gitignore  TODO.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
backup/: index.html
components/Navbar/: Navbar.css
python-sandbox/add-image-container-id/: add-image-container-id.py
python-sandbox/add-image-container-id/data/: 1A20.10.json  1C20.16.json  1C20.35.json  1C30.55.json  1D10.20.json  1D50.20.json  1D50.41.json  1D60.40.json  1E10.10.json  1F20.10.json  1G10.40.json  1K10.30.json  1Q10.30.json  1Q40.25.json  2B30.30.json  2B40.20.json  3A10.10.json  3A15.20.json  3A15.25.json  3A20.10.json  3A20.35.json  3A60.20.json  3A70.25.json  3A95.52.json  3B22.11.json  3B25.25.json  4B10.10.json  4B20.10.json  4B40.10.json  4C30.10.json  4D20.10.json  (+26 more)
scripts/: anti-wordpress.html
services/: demo_template.ejs
services/build-demos/: 1A20.10-original.html  1A20.10.md  buildDemos.ts  constants.ts
src/: astronomy.ejs  demo_template.ejs  template.ejs
src/data/: 1A20.10.json  1A30.10.json  1A30.40.json  1C20.16.json  1C20.35.json  1C30.55.json  1D10.20.json  1D15.20.json  1D50.10.json  1D50.20.json  1D50.41.json  1D55.10.json  1D60.20.json  1D60.30.json  1D60.40.json  1E10.10.json  1F20.10.json  1G10.40.json  1H10.20.json  1H11.30.json  1J30.10.json  1J30.20.json  1J30.28.json  1J30.60.json  1K10.30.json  1M40.20.json  1M40.25.json  1M40.40.json  1Q10.30.json  1Q10.35.json  1Q20.10.json  1Q40.10.json  1Q40.25.json  2A10.51.json  2B30.30.json  2B40.10.json  2B40.20.json  2C20.10.json  2C20.30.json  3A10.10.json  (+78 more)
stylesheets/: demo.css
(+71 files in other folders)
