[tool.poetry]
name = "demo-website"
version = "0.1.0"
description = ""
authors = ["Noah Hinojos <noah.hinojos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
